each answer styling

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ p.demo-module{
   color: red;
 }
 
-p.answers{
+p.1{
   padding: 10px;
   border: medium double #808000;
   background-color: orange;
