--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ p.demo-module{
   color: red;
 }
 
-p #1{
+.answers{
   padding: 10px;
   border: medium double #808000;
   background-color: orange;
