--- a/style.css
+++ b/style.css
@@ -1,6 +1,21 @@
-.demo-module {
-  font-family: sans-serif;
-  color: pink;
-  font-style: italic;
+body {
+  font-family: "Benton Sans", "Helvetica Neue", helvetica, arial, sans-serif;
   text-align: center;
+  margin: 30px;
+}
+
+
+.pink {
+  color: pink;
+  font-style: normal;
+}
+
+.green {
+  color: green;
+  font-style: oblique;
+}
+
+.red {
+  color: red;
+  font-style: italic;:
 }
